--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-countup": "^4.3.3",
+    "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.8.15",
     "react-scripts": "4.0.3",
